@@ -21,7 +21,9 @@ Date:
         - Open the preferences or milestones when you click on the icon for the reactor or quality warning messages.
         - Implemented Auto Save.
         - (SA) Research recipes correctly consume quality science packs, and the UI explains this.
+    Fixes:
         - Fix export of blueprint chests from shopping list (broken in factorio >= 2.0.35)
+        - (regression) The total sushi-input/-output items display belt counts again, and allow them as input.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.10.0
 Date: March 5th 2025
